[metadata]
name = quokka
summary = OpenStack Gaming Service
description-file =
    README.rst
author = Lorenzo Comotti
author-email = lorenzo.comotti97@gmail.com
#home-page = https://docs.openstack.org/glance/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
data_files =
    etc/quokka =
        etc/quokka.conf
packages =
    quokka

[entry_points]
console_scripts =
    quokka-api = quokka.cmd.api:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
